feat: folder get works
