# pkg/models/error.go
@@ -1,0 +1,88 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// Error error
+//
+// swagger:model Error
+type Error struct {
+
+	// error code
+	// Required: true
+	ErrorCode *string `json:"errorCode"`
+
+	// error desc
+	// Required: true
+	ErrorDesc *string `json:"errorDesc"`
+}
+
+// Validate validates this error
+func (m *Error) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateErrorCode(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateErrorDesc(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *Error) validateErrorCode(formats strfmt.Registry) error {
+
+	if err := validate.Required("errorCode", "body", m.ErrorCode); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *Error) validateErrorDesc(formats strfmt.Registry) error {
+
+	if err := validate.Required("errorDesc", "body", m.ErrorDesc); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// ContextValidate validates this error based on context it is used
+func (m *Error) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *Error) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *Error) UnmarshalBinary(b []byte) error {
+	var res Error
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
